# quantum-auth

./: .env.example  .envrc  .gitignore  .lintstagedrc.json  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
.turbo/cache/: 826a48e90cca5cac-meta.json  826a48e90cca5cac.tar.zst
apps/web/: package.json  tailwind.config.ts
apps/web/src/app/: globals.css  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/components/: theme-toggle.tsx
apps/web/src/components/ui/: toaster.tsx
apps/web/src/contexts/: index.ts  onboarding-context.tsx  recovery-context.tsx
apps/web/src/hooks/: use-auth.ts  use-crypto.ts
services/auth/: Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  test_direct.py  test_security_standalone.py
services/auth/app/: main.py
services/auth/app/api/v1/: api.py  routes_auth.py  routes_keys.py  routes_recovery.py
services/auth/app/core/: config.py  security.py  simple_sharing.py  supabase.py
services/auth/app/db/: models.py  session.py
services/auth/app/db/alembic/: env.py
services/auth/app/db/alembic/versions/: 001_initial_schema.py
services/auth/app/schemas/: auth.py  keys.py  recovery.py
services/auth/app/trpc/: __init__.py  router.py
services/auth/scripts/: start.sh  test.sh
services/auth/tests/: conftest.py
services/auth/tests/integration/: test_auth_api.py  test_keys_api.py  test_recovery_api.py
services/auth/tests/unit/: test_security.py  test_supabase.py
(+1 files in other folders)
